# cpp-oop-labs-maii-3

./: CMakeLists.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
include/: TRS.h  fivee.h  nod.h
labOC_1/: README.md  child  child.cpp  numbers.txt  parent  parent.cpp
src/: TRS.cpp  fivee.cpp  main.cpp  nod.cpp
test/: tests_nod.cpp
tests/: tests_figures_simple.cpp  tests_fivee.cpp
